fix: delete endpoint for unsave route
