# docs/swagger.yaml
@@ -246,73 +246,6 @@ paths:
                     type: string
                     example: Gagal menyimpan rute
 
-  /mobile/routes/unsave/{id}:
-    delete:
-      tags:
-        - Mobile - Routes
-      summary: Menghapus Rekomendasi Rute
-      description: API untuk menghapus rekomendasi rute.
-      security:
-        - BearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    example: Success
-                  message:
-                    type: string
-                    example: data rute berhasil dihapus
-        '400':
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: Format token tidak valid, gunakan bearer token
-        '401':
-          $ref: '#/components/responses/UnauthorizedResponse'
-        '404':
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    example: Failed
-                  message:
-                    type: string
-                    example: Rute tidak ditemukan
-        '500':
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    example: Failed
-                  message:
-                    type: string
-                    example: Gagal menghapus rute
-
   /mobile/home:
     get:
       tags:
