# routers/mobile/route_router.go
@@ -25,5 +25,4 @@ func RouteRouter(r *echo.Group) {
 
 	r.POST("/summarize", handler.SummarizeRoute)
 	r.POST("/save", handler.SaveRoute)
-	r.DELETE("/unsave/:id", handler.DeleteRoute)
 }
